Updated contact form location

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
         $("#contact-form").submit(function(e) {
             $(".spinner").show();
-            $.post("http://localhost:54028/contact", {
+            $.post("http://contactform.apphb.com/contact", {
                 Name: $("#Name").val(),
                 Email: $("#Email").val(),
                 Telephone: $("#Telephone").val(),
