Description Meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+    <meta name="description" content="Software Development Consultancy and Bespoke Development using Lean and Agile practices for a Business Value Driven Approach"/>    
+
     <title>sense|making</title>
 
     <!-- Bootstrap -->
